--- a/myMovieReviews/reviews/templates/reviews_create.html
+++ b/myMovieReviews/reviews/templates/reviews_create.html
@@ -1,18 +1,34 @@
 <form action="/create" method="post">
   {% csrf_token %}
-  <input name="title" placeholder="제목" /> <br />
+  <label for="title">제목: </label>
+  <input name="title" placeholder="제목" /><br />
+
+  <label for="createdDate">개봉 날짜: </label>
   <input name="createdDate" placeholder="개봉 날짜" /> <br />
+
+  <label for="genre">장르: </label>
   <input name="genre" placeholder="장르" /> <br />
+
+  <label for="rank">평점: </label>
   <input name="rank" placeholder="평점" /> <br />
-  <input name="running_time" placeholder="상영 시간" /> <br />
-  <input
+
+  <label for="running_time">상영 시간: </label
+  ><input name="running_time" placeholder="상영 시간" /> <br />
+
+  <label for="content">내용: </label
+  ><input
     name="content"
     placeholder="내용"
     style="width: 200px; height: 100px"
   />
+
   <br />
-  <input name="director" placeholder="감독" /> <br />
-  <input name="actors" placeholder="배우" /> <br />
+  <label for="director">감독: </label
+  ><input name="director" placeholder="감독" /> <br />
+
+  <label for="actors">배우: </label><input name="actors" placeholder="배우" />
+  <br />
+
   <div>
     <input type="submit" value="저장" />
   </div>
